// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddPhotosButton /> with custom title renders the AddPhotosButton component with the given title 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 3,
        "overflow": "hidden",
      },
      Object {
        "borderRadius": 3,
      },
      undefined,
      false,
    ]
  }
>
  <View
    accessibilityRole="button"
    accessibilityState={
      Object {
        "busy": false,
        "disabled": false,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    nativeID="animatedComponent"
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="add-photos-button-testID"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderColor": "#5B5B5B",
          "borderRadius": 26,
          "borderWidth": 2,
          "flexDirection": "row",
          "height": 52,
          "justifyContent": "center",
          "padding": 8,
          "width": 164,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#5B5B5B",
            "fontFamily": "NotoSansJP-Bold",
            "fontSize": 13,
            "fontWeight": undefined,
            "letterSpacing": 0,
            "lineHeight": 20,
            "paddingVertical": 1,
            "textAlign": "center",
          }
        }
      >
        Custom title
      </Text>
    </View>
  </View>
</View>
`;

exports[`<AddPhotosButton /> with the default props renders the AddPhotosButton component correctly 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 3,
        "overflow": "hidden",
      },
      Object {
        "borderRadius": 3,
      },
      undefined,
      false,
    ]
  }
>
  <View
    accessibilityRole="button"
    accessibilityState={
      Object {
        "busy": false,
        "disabled": false,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    nativeID="animatedComponent"
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="add-photos-button-testID"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderColor": "#5B5B5B",
          "borderRadius": 26,
          "borderWidth": 2,
          "flexDirection": "row",
          "height": 52,
          "justifyContent": "center",
          "padding": 8,
          "width": 164,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#5B5B5B",
            "fontFamily": "NotoSansJP-Bold",
            "fontSize": 13,
            "fontWeight": undefined,
            "letterSpacing": 0,
            "lineHeight": 20,
            "paddingVertical": 1,
            "textAlign": "center",
          }
        }
      >
        Add photo/s
      </Text>
    </View>
  </View>
</View>
`;
